# skg_bionic_cat

./: CMakeLists.txt  README.md  key_and_secret_en.txt  key_and_secret_zh.txt
3rd/agora_sdk/include/: agora_rtc_api.h
3rd/cmsis_dsp/lib/cmake/CMSIS_DSP/: CMSIS_DSPConfig.cmake  CMSIS_DSPConfigVersion.cmake
3rd/cmsis_dsp/lib/pkgconfig/: CMSIS_DSP.pc
3rd/cvi_mpi/include/: cvi_comm_3a.h  cvi_comm_isp.h  cvi_comm_isp_module.h  cvi_defines.h  sensor_cfg.h
3rd/fdk_aac/lib/: libfdk-aac.la
3rd/fdk_aac/lib/pkgconfig/: fdk-aac.pc
3rd/glog/include/glog/: logging.h
3rd/glog/lib/: libglog.so.0.7.1
3rd/lvgl/include/: lv_conf.h
3rd/lvgl/lib/: liblvgl.so.9  liblvgl.so.9.4.0
3rd/mosquitto/lib/: libmosquitto.so.2.0.22  libmosquittopp.so.2.0.22
3rd/mosquitto/lib/pkgconfig/: libmosquitto.pc  libmosquittopp.pc
3rd/mosquitto/sbin/: mosquitto
3rd/openssl/include/openssl/: opensslconf.h
3rd/openssl/lib/: libcrypto.so.1.1  libssl.so.1.1
3rd/paho_mqtt_c/lib/cmake/eclipse-paho-mqtt-c/: eclipse-paho-mqtt-cConfig-release.cmake  eclipse-paho-mqtt-cConfig.cmake
3rd/paho_mqtt_cpp/lib/: libpaho-mqttpp3.so.1  libpaho-mqttpp3.so.1.4.2
3rd/paho_mqtt_cpp/lib/cmake/PahoMqttCpp/: PahoMqttCppConfig.cmake  PahoMqttCppConfigVersion.cmake  PahoMqttCppTargets-noconfig.cmake  PahoMqttCppTargets.cmake
3rd/yaml_cpp/lib/: libyaml-cpp.so.0.8.0
3rd/yaml_cpp/lib/cmake/yaml-cpp/: yaml-cpp-targets.cmake
3rd/yaml_cpp/lib/pkgconfig/: yaml-cpp.pc
agora_module/: CMakeLists.txt
agora_module/include/: agora_server.h  app_config.h  audio_controller.h  ringbuffer.h
agora_module/src/: agora_server.c  audio_controller.c  hello_rtsa.c
bionic_cat_microphone_module/: CMakeLists.txt
bionic_cat_microphone_module/include/: capture_audio.hpp  microphone_node.hpp  sound_localization.hpp
bionic_cat_microphone_module/src/: capture_audio.cpp  main.cpp  microphone_node.cpp  sound_localization.cpp
bionic_cat_microphone_module/test/: test.c  test_microphone_mqtt.cpp  test_streamer.cpp
bionic_cat_mqtt_msgs/: CMakeLists.txt  README.md
bionic_cat_mqtt_msgs/include/: bionic_cat_mqtt_msg.hpp  serializer.hpp
bionic_cat_mqtt_msgs/test/: README.md  run_tests.sh  test_serializer.cpp
bionic_cat_mqtt_utils/: CMakeLists.txt  README.md
bionic_cat_mqtt_utils/cmake/: bionic_cat_bionic_cat_mqtt_utilsConfig.cmake.in
bionic_cat_mqtt_utils/examples/: CMakeLists.txt  publisher_example.cpp  subscriber_example.cpp
bionic_cat_mqtt_utils/include/: mqtt_client.hpp  mqtt_utils.hpp
bionic_cat_speaker_module/: CMakeLists.txt  README.md
bionic_cat_speaker_module/include/: play_wav_tinyalsa.hpp  speaker_node.hpp
bionic_cat_speaker_module/src/: main.cpp  play_wav_tinyalsa.cpp  speaker_node.cpp
bionic_cat_speaker_module/test/: test.cpp
cmake/: CrossCompileConfig.cmake  FindCrossCompileLibWebsockets.cmake  FindCrossCompileYAMLCPP.cmake  FindThirdPartyPro.cmake
scripts/: auto.sh  bionic_cat_bringup.sh  envsetup.sh  open_radar.sh  start.sh  start_custom_app.sh
